--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -10,10 +10,10 @@ $--mobile-screen: 768px;
   }
 }
 header {
-  background-color: #1a1a1a;
+  background-color: #000000;
   padding: 1rem;
   text-align: center;
-
+  z-index: 1;
   left: 0;
   right: 0;
 
@@ -40,5 +40,5 @@ header {
 
 .active {
   border-radius: 10px;
-  text-shadow: 0 3px 2px rgb(245, 12, 12);
+  color: rgb(49, 49, 49);
 }
