--- a/src/style/Ship.scss
+++ b/src/style/Ship.scss
@@ -18,7 +18,7 @@ $--mobile-screen: 768px;
   }
 }
 
-.char {
+.ship {
   padding: 30px;
   &__container {
     margin: auto;
@@ -31,7 +31,7 @@ $--mobile-screen: 768px;
     &--item {
       color: white;
       box-shadow: 0 0 5px 2px white;
-      background-image: url("https://avatars.mds.yandex.net/i?id=ecf507771afba28f192fc0bf0a039a96_l-5330809-images-thumbs&n=13");
+      background-image: url("https://avatars.mds.yandex.net/i?id=5af7201309b830c662a28b81023e359a_l-5185593-images-thumbs&n=13");
       background-size: cover;
       text-align: center;
       list-style: none;
@@ -59,12 +59,6 @@ $--mobile-screen: 768px;
       @media screen and (max-width: $--mobile-screen) {
         right: 30%;
       }
-    }
-    &--btn {
-      width: 200px;
-      height: 100px;
-      background-color: azure;
-      color: white;
     }
   }
 }
